--- a/src/data/content-status.yaml
+++ b/src/data/content-status.yaml
@@ -672,8 +672,8 @@
 - book: Collapse of the Republic
   resource: Gear
   source: The Outer Rim
-  entered: No
-  audited: No
+  entered: Yes
+  audited: Yes
 - book: Collapse of the Republic
   resource: Qualities
   source: The Outer Rim
