--- a/src/data/gear.yaml
+++ b/src/data/gear.yaml
@@ -1637,7 +1637,7 @@
   restricted: false
   encumbrance: 0
   rarity: 5
-  index: 0e5c0b9b-ec77-4be1-9e4d-f8188d35f9eb:50
+  index: 0e5c0b9b-ec77-4be1-9e4d-f8188d35f9eb:50, 04196a88-99d9-4018-83ef-ca37d68a4869:58
   generatedId: 4d57a21b-d28a-4a65-8096-c94118b2a56d
 - category: Security
   name: Data Dead Drop
@@ -1784,12 +1784,12 @@
   index: 0e5c0b9b-ec77-4be1-9e4d-f8188d35f9eb:53
   generatedId: 984abd58-2bd8-48e9-a287-0dfd1fd04dce
 - category: Security
-  name: Stun Cuffs
+  name: Stuncuffs
   price: 100
   restricted: false
   encumbrance: 0
   rarity: 5
-  index: 91b5a626-105f-45d0-8347-e7bf176e4938:52
+  index: 91b5a626-105f-45d0-8347-e7bf176e4938:52, 04196a88-99d9-4018-83ef-ca37d68a4869:59
   generatedId: dac6b3d7-46c9-4743-8a08-cdd6281e5e9b
 - category: Security
   name: Thalassian Security Collar
@@ -2277,7 +2277,7 @@
   restricted: true
   encumbrance: 0
   rarity: 8
-  index: 0e5c0b9b-ec77-4be1-9e4d-f8188d35f9eb:51
+  index: 0e5c0b9b-ec77-4be1-9e4d-f8188d35f9eb:51, 04196a88-99d9-4018-83ef-ca37d68a4869:58
   generatedId: 3f5fffdb-832d-4b76-b97a-65e2b11245ad
 - category: Tools
   name: Ealewon A-212 Tracing Console
@@ -2719,3 +2719,43 @@
   rarity: 3
   index: f358e094-fb3f-46ca-a540-b76c474ac712:44
   generatedId: 31499f6f-74e4-48ce-b232-721e438acbbc
+- category: Droids
+  name: Nano-Droids
+  price: 50000
+  restricted: true
+  encumbrance: "-"
+  rarity: 9
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:58
+  generatedId: 3d17a488-f799-49a9-b3e3-d070ec565865
+- category: Tools
+  name: Z-6 Jetpack
+  price: 5250
+  restricted: false
+  encumbrance: 3
+  rarity: 7
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:59
+  generatedId: 8462f6f6-82e5-496e-bc39-c76970a39e57
+- category: Survival
+  name: Aquasuit
+  price: 250
+  restricted: false
+  encumbrance: 3
+  rarity: 2
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:58
+  generatedId: bfecbdfa-fbe6-4482-aec4-82ed2b926cd9
+- category: Tools
+  name: JT-12C Jetpack
+  price: 4750
+  restricted: false
+  encumbrance: 2
+  rarity: 7
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:58
+  generatedId: dfa843a7-9bf0-4b54-821d-cdca0931bded
+- category: Tools
+  name: Rocket Boots
+  price: 2500
+  restricted: false
+  encumbrance: 2
+  rarity: 8
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:59
+  generatedId: e0545b71-3b4d-4304-aa44-fdb404412fb9
