--- a/src/data/armor.yaml
+++ b/src/data/armor.yaml
@@ -749,7 +749,7 @@
   index: cf023ae2-5206-49e0-9e39-550bba0f7f56:58
   generatedId: d7c2dca1-9248-4f5a-8f00-81a06fe7f776
 - name: Clone Dive Armor
-  defence: 0
+  defense: 0
   soak: 2
   price: 4500
   restricted: true
@@ -759,7 +759,7 @@
   index: 04196a88-99d9-4018-83ef-ca37d68a4869:56
   generatedId: 4f13efc4-eb97-4c6e-bd39-04a0903b6048
 - name: Clone Reconnaissance Armor
-  defence: 0
+  defense: 0
   soak: 2
   price: 4000
   restricted: true
@@ -769,7 +769,7 @@
   index: 04196a88-99d9-4018-83ef-ca37d68a4869:56
   generatedId: 2f2b2be2-54ef-49a9-af71-00775b272112
 - name: Jedi Reconnaissance Armor
-  defence: 1
+  defense: 1
   soak: 1
   price: 4000
   restricted: false
@@ -779,7 +779,7 @@
   index: 04196a88-99d9-4018-83ef-ca37d68a4869:56
   generatedId: 470c8de8-1b18-4a3e-800d-a59e972a16c1
 - name: Katarn-class Commando Armor
-  defence: 1
+  defense: 1
   soak: 2
   price: 6500
   restricted: true
@@ -789,7 +789,7 @@
   index: 04196a88-99d9-4018-83ef-ca37d68a4869:56
   generatedId: 4cc9340c-d5b8-491d-a26d-07ac8d918828
 - name: Mandalorian Armor
-  defence: 1
+  defense: 1
   soak: 2
   price: 6000
   restricted: true
@@ -799,7 +799,7 @@
   index: 04196a88-99d9-4018-83ef-ca37d68a4869:57
   generatedId: 8872e42b-9808-4c95-ab4c-e10e9808b2fc
 - name: Phase II ARC Trooper Armor
-  defence: 1
+  defense: 1
   soak: 2
   price: 5500
   restricted: true
@@ -809,7 +809,7 @@
   index: 04196a88-99d9-4018-83ef-ca37d68a4869:57
   generatedId: 688c8627-f523-4047-bcba-1a3c2dcbc4f2
 - name: Phase II Clone Trooper Armor
-  defence: 0
+  defense: 0
   soak: 2
   price: 3000
   restricted: true
