--- a/src/data/content-status.yaml
+++ b/src/data/content-status.yaml
@@ -2432,92 +2432,92 @@
 - book: Fully Operational
   resource: Abilities
   source: Viluppo
-  entered: Yes
+  entered: No
   audited: No
 - book: Fully Operational
   resource: Adversaries
   source: Viluppo
-  entered: Yes
+  entered: No
   audited: No
 - book: Fully Operational
   resource: Adversaries Armor
   source: Viluppo
-  entered: Yes
+  entered: No
   audited: No
 - book: Fully Operational
   resource: Adversaries Gear
   source: Viluppo
-  entered: Yes
+  entered: No
   audited: No
 - book: Fully Operational
   resource: Adversaries Weapons
   source: Viluppo
-  entered: Yes
+  entered: No
   audited: No
 - book: Fully Operational
   resource: Armor
   source: Viluppo
-  entered: Yes
+  entered: No
   audited: No
 - book: Fully Operational
   resource: Creatures
   source: Viluppo
-  entered: Yes
+  entered: No
   audited: No
 - book: Fully Operational
   resource: Creatures Weapons
   source: Viluppo
-  entered: Yes
+  entered: No
   audited: No
 - book: Fully Operational
   resource: Gear
   source: Viluppo
-  entered: Yes
+  entered: No
   audited: No
 - book: Fully Operational
   resource: Qualities
   source: Viluppo
-  entered: Yes
+  entered: No
   audited: No
 - book: Fully Operational
   resource: Skills
   source: Viluppo
-  entered: Yes
+  entered: No
   audited: No
 - book: Fully Operational
   resource: Species
   source: Viluppo
-  entered: Yes
+  entered: No
   audited: No
 - book: Fully Operational
   resource: Starships
   source: Viluppo
-  entered: Yes
+  entered: No
   audited: No
 - book: Fully Operational
   resource: Talents
   source: Viluppo
-  entered: Yes
+  entered: No
   audited: No
 - book: Fully Operational
   resource: Vehicle Attachments
   source: Viluppo
-  entered: Yes
+  entered: No
   audited: No
 - book: Fully Operational
   resource: Vehicles
   source: Viluppo
-  entered: Yes
+  entered: No
   audited: No
 - book: Fully Operational
   resource: Weapon Attachments
   source: Viluppo
-  entered: Yes
+  entered: No
   audited: No
 - book: Fully Operational
   resource: Weapons
   source: Viluppo
-  entered: Yes
+  entered: No
   audited: No
 - book: Gadgets and Gear
   resource: Abilities
