--- a/src/data/content-status.yaml
+++ b/src/data/content-status.yaml
@@ -3087,8 +3087,8 @@
 - book: Knights of Fate
   resource: Armor
   source: The Outer Rim
-  entered: No
-  audited: No
+  entered: Yes
+  audited: Yes
 - book: Knights of Fate
   resource: Creatures
   source: The Outer Rim
