--- a/src/data/talents.yaml
+++ b/src/data/talents.yaml
@@ -3131,3 +3131,9 @@
   forceSensitive: No
   index: cf023ae2-5206-49e0-9e39-550bba0f7f56:43
   generatedId: f8d02cc2-bccf-487e-8dcb-f195db41b214
+- name: Ready for Anything (Improved)
+  activation: Passive
+  ranked: No
+  forceSensitive: No
+  index: f358e094-fb3f-46ca-a540-b76c474ac712:34
+  generatedId: d2936366-5767-4fdd-b51a-f376bada0cfe
