Update audited LbE gear (#191)
* Update audited LbE gear

* Add more LbE audits

--- a/src/data/content-status.yaml
+++ b/src/data/content-status.yaml
@@ -3153,7 +3153,7 @@
   resource: Abilities
   source: Viluppo
   entered: Yes
-  audited: No
+  audited: Yes
 - book: Lead by Example
   resource: Adversaries
   source: Viluppo
@@ -3163,47 +3163,47 @@
   resource: Adversaries Armor
   source: Viluppo
   entered: Yes
-  audited: No
+  audited: Yes
 - book: Lead by Example
   resource: Adversaries Gear
   source: Viluppo
   entered: Yes
-  audited: No
+  audited: Yes
 - book: Lead by Example
   resource: Adversaries Weapons
   source: Viluppo
   entered: Yes
-  audited: No
+  audited: Yes
 - book: Lead by Example
   resource: Armor
   source: Viluppo
   entered: Yes
-  audited: No
+  audited: Yes
 - book: Lead by Example
   resource: Creatures
   source: Viluppo
   entered: Yes
-  audited: No
+  audited: Yes
 - book: Lead by Example
   resource: Creatures Weapons
   source: Viluppo
   entered: Yes
-  audited: No
+  audited: Yes
 - book: Lead by Example
   resource: Gear
   source: Viluppo
   entered: Yes
-  audited: No
+  audited: Yes
 - book: Lead by Example
   resource: Qualities
   source: Viluppo
   entered: Yes
-  audited: No
+  audited: Yes
 - book: Lead by Example
   resource: Skills
   source: Viluppo
   entered: Yes
-  audited: No
+  audited: Yes
 - book: Lead by Example
   resource: Species
   source: Viluppo
@@ -3218,12 +3218,12 @@
   resource: Talents
   source: Viluppo
   entered: Yes
-  audited: No
+  audited: Yes
 - book: Lead by Example
   resource: Vehicle Attachments
   source: Viluppo
   entered: Yes
-  audited: No
+  audited: Yes
 - book: Lead by Example
   resource: Vehicles
   source: Viluppo
@@ -3233,12 +3233,12 @@
   resource: Weapon Attachments
   source: Viluppo
   entered: Yes
-  audited: No
+  audited: Yes
 - book: Lead by Example
   resource: Weapons
   source: Viluppo
   entered: Yes
-  audited: No
+  audited: Yes
 - book: Lords of Nal Hutta
   resource: Abilities
   source: Viluppo
